Add support for setting appender to use via system property

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
 # Define some default values that can be overridden by system properties
 bixo.root.level=DEBUG
 bixo.http.level=INFO
+bixo.appender=console
 
-bixo.root.logger=${bixo.root.level},console
+bixo.root.logger=${bixo.root.level},${bixo.appender}
 bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
 bixo.log.dir=./logs
 bixo.log.file=bixo.log
