--- a/build.xml
+++ b/build.xml
@@ -398,7 +398,7 @@ SOFTWARE.
 			<fileset file="${basedir}/README" />
 		</copy>
 		<copy todir="${build.dir.dist}/docs">
-			<fileset file="${basedir}/doc/eclipse-formatter.xml" />
+			<fileset file="${basedir}/doc/eclipse-formatter.properties" />
 		</copy>
 		<copy todir="${build.dir.dist}/docs/licenses">
 			<fileset dir="${basedir}/doc/licenses" />
@@ -455,11 +455,8 @@ SOFTWARE.
 		</eclipse>
 		<concat destfile="${root.dir}/.settings/org.eclipse.jdt.core.prefs"
 		        append="true">
-			<filelist dir="${root.dir}/doc/" files="eclipse-formatter.xml" />
+			<filelist dir="${root.dir}/doc/" files="eclipse-formatter.properties" />
 		</concat>
-		<replace file="${root.dir}/.settings/org.eclipse.jdt.core.prefs"
-		         token="org.eclipse.jdt.core.compiler.compliance=6.0"
-		         value="org.eclipse.jdt.core.compiler.compliance=1.6" />
 	</target>
 
 	<target name="clean-eclipse"
