--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-core</artifactId>
-            <version>1.0.16</version>
+            <version>1.1-WIP-84</version>
         </dependency>
         
 		<dependency>
@@ -160,7 +160,7 @@
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-test</artifactId>
-            <version>1.0.16</version>
+            <version>1.1-WIP-84</version>
             <scope>test</scope>
         </dependency>
         
