--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -30,11 +30,11 @@
 		</dependency>
 		
 		<dependency>
-            <groupId>org.apache</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>0.19.2</version>
-        </dependency>
-        
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>0.18.3</version>
+		</dependency>
+
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-core</artifactId>
