--- a/contrib/helpful/build.xml
+++ b/contrib/helpful/build.xml
@@ -1,28 +1,7 @@
-<!--
-Copyright (c) 2009 TransPac Software, Inc.
-
-Permission is hereby granted, free of charge, to any person obtaining a copy 
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights 
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell 
-copies of the Software, and to permit persons to whom the Software is 
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in 
-all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR 
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, 
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE 
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER 
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
--->
 <project name="helpful" default="test">
 
 	<property name="root.dir" value="${basedir}" />
-	<property file="${root.dir}/src/build/ant/build.properties" />
+	<property file="${root.dir}/build.properties" />
 
 	<!-- ================================================================== -->
 	<!-- General cleaning sources                                           -->
@@ -185,30 +164,6 @@ SOFTWARE.
 	</target>
 
 	<!-- ================================================================== -->
-	<!-- Java Doc                                                           -->
-	<!-- ================================================================== -->
-
-
-	<target name="doc" depends="compile" description="--> create javadoc">
-		<mkdir dir="${build.javadoc}" />
-		<javadoc packagenames="${javadoc.package}"
-		         destdir="${build.javadoc}"
-		         author="true"
-		         version="true"
-		         use="true"
-		         windowtitle="${name} ${version} API"
-		         doctitle="${name} ${version} API"
-		         bottom="Copyright &amp;copy; ${javadoc.year} TransPac Software, Inc.">
-			<packageset dir="${main.src.dir}" />
-			<link href="${javadoc.link.java}" />
-			<classpath>
-				<path refid="compile.classpath" />
-			</classpath>
-			<group title="${javadoc.title}" packages="${javadoc.package}*" />
-		</javadoc>
-	</target>
-
-	<!-- ================================================================== -->
 	<!-- Hadoop job jar                                                     -->
 	<!-- ================================================================== -->
 
@@ -216,86 +171,14 @@ SOFTWARE.
 	        depends="compile"
 	        description="--> create a Hadoop ready jar with all dependencies">
 
-		<copy todir="${build.dir}/runtime-libs" flatten="true">
+		<copy todir="${build.dir}/lib" flatten="true">
 			<path refid="runtime.classpath" />
 		</copy>
 
 		<jar destfile="${build.dir}/${job.name}" compress="true">
 			<fileset dir="${build.dir.main-classes}" />
-			<fileset dir="${build.dir}" includes="runtime-libs/" />
-
-			<manifest>
-				<attribute name="Main-Class" value="${job.main.class}" />
-			</manifest>
+			<fileset dir="${build.dir}" includes="lib/" />
 		</jar>
-	</target>
-
-
-	<!-- ================================================================== -->
-	<!-- Generate a distribution                                            -->
-	<!-- ================================================================== -->
-
-	<target name="dist"
-	        depends="test-all, jar, doc"
-	        description="--> create a tarball distribution">
-
-		<delete dir="${build.dir.dist}" />
-
-		<!-- create target directory -->
-		<mkdir dir="${build.dir.dist}" />
-		<mkdir dir="${build.dir.dist}/bin" />
-		<mkdir dir="${build.dir.dist}/docs" />
-		<mkdir dir="${build.dir.dist}/docs/licenses" />
-		<mkdir dir="${build.dir.dist}/docs/javadoc" />
-		<mkdir dir="${build.dir.dist}/docs/reports" />
-		<mkdir dir="${build.dir.dist}/lib" />
-		<mkdir dir="${build.dir.dist}/repo" />
-		<mkdir dir="${build.dir.dist}/src" />
-
-		<!-- copy launch script to target -->
-		<copy todir="${build.dir.dist}/bin">
-			<fileset dir="${basedir}/bin" />
-		</copy>
-		
-		<!-- copy  javadoc to target dir  -->
-		<copy todir="${build.dir.dist}/docs/javadoc">
-			<fileset dir="${build.javadoc}" />
-		</copy>
-		
-		<!-- copy any raw libs -->
-		<copy todir="${build.dir.dist}/lib" flatten="true">
-			<fileset dir="${lib.dir}" />
-		</copy>
-		
-		<!-- copy our local maven repo -->
-		<copy todir="${build.dir.dist}/repo">
-			<fileset dir="${basedir}/repo" />
-		</copy>
-		
-		<!-- copy src -->
-		<copy todir="${build.dir.dist}/src">
-			<fileset dir="${basedir}/src" />
-		</copy>
-		
-		<!-- copy project jar to dist dir -->
-		<copy todir="${build.dir.dist}">
-			<fileset file="${build.dir}/${jar.name}" />
-		</copy>
-
-		<!-- copy documents -->
-		<copy todir="${build.dir.dist}">
-			<fileset file="${basedir}/README" />
-		</copy>
-		<copy todir="${build.dir.dist}/docs">
-			<fileset file="${basedir}/doc/eclipse-formatter.xml" />
-		</copy>
-		<copy todir="${build.dir.dist}/docs/licenses">
-			<fileset dir="${basedir}/doc/licenses" />
-		</copy>
-
-		<tar longfile="gnu" compression="gzip" destfile="${build.release.file}">
-			<tarfileset dir="${build.dir.dist}" />
-		</tar>
 	</target>
 
 
@@ -330,9 +213,6 @@ SOFTWARE.
 				<source path="${basedir}/src/test/resources"
 				        output="${build.dir.test-classes-eclipse}" />
 
-				<!-- extras -->
-				<!-- we do not yet have extra modules, but it is just a question of time :) -->
-
 				<output path="${build.dir.main-classes-eclipse}" />
 				<library pathref="test.classpath" exported="false" />
 			</classpath>
@@ -354,32 +234,5 @@ SOFTWARE.
 		<delete dir=".settings" />
 	</target>
 
-
-	<!-- ================================================================== -->
-	<!-- Multi project build                                                -->
-	<!-- ================================================================== -->
-
-	<macrodef name="iterate">
-		<attribute name="target" />
-		<sequential>
-			<subant target="@{target}">
-				<property name="root.dir" value="${basedir}" />
-				<!-- extras should go into a sub folder extras 
-                <fileset dir="extras" includes="*/build.xml" />
-                -->
-			</subant>
-		</sequential>
-	</macrodef>
-
-	<target name="clean-all">
-		<antcall target="clean" />
-		<iterate target="clean" />
-	</target>
-
-	<target name="test-all"
-			description="--> run all tests">
-	
-		<iterate target="test" />
-	</target>
 
 </project>
