--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -38,9 +38,9 @@
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-core</artifactId>
-            <version>1.0.16</version>
+            <version>1.1-WIP-84</version>
         </dependency>
-        
+                
 		<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
