--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <!--
-Copyright (c) 1997-2009 101tec Inc.
+Copyright (c) 2009 Bixo Labs.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy 
 of this software and associated documentation files (the "Software"), to deal
