--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,10 @@
 # Define some default values that can be overridden by system properties
-bixo.root.logger=TRACE,console
+bixo.root.level=TRACE
+bixo.http.level=INFO
+bixo.appender=console
+
+# Define some default values that can be overridden by system properties
+bixo.root.logger=${bixo.root.level},${bixo.appender}
 bixo.console.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{2}:%L - %m%n
 bixo.http.level=INFO
 bixo.log.dir=./logs
