--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,28 +16,8 @@ log4j.rootLogger=${bixo.root.logger}
 log4j.threshhold=ALL
 
 #
-# Daily Rolling File Appender
-#
-log4j.appender.DRFA=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.DRFA.File=${bixo.log.dir}/${bixo.log.file}
-
-# Rollver at midnight
-log4j.appender.DRFA.DatePattern=.yyyy-MM-dd
-
-# 30-day backup
-#log4j.appender.DRFA.MaxBackupIndex=30
-log4j.appender.DRFA.layout=org.apache.log4j.PatternLayout
-
-# Pattern format: Date LogLevel LoggerName LogMessage
-log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %p %c:%L - %m%n
-
-# Debugging Pattern format
-#log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M(%L)) - %m%n
-
-
-#
 # console
-# Add "console" to bixo.root.logger above if you want to use this 
+# set bixo.appender to "console" if you want to use this 
 #
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
@@ -68,4 +48,3 @@ log4j.logger.org.apache.hadoop.mapred.JobClient=ERROR
 log4j.logger.org.apache.http.impl.conn.tsccm.RefQueueWorker=INFO
 log4j.logger.org.mortbay.util.ThreadedServer=INFO
 
-#log4j.logger.org.apache.hadoop.fs.FSNamesystem=DEBUG
