--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 	<url>http://bixo.101tec.com</url>
 	<description>Bixo is an open source Java web mining toolkit that runs as a series of Cascading pipes. It is designed to be used as a tool for creating customized crawlers and analyzers, thus each Cascading pipe implements a discrete operation.</description>
 	<scm>
-		<connection>scm:git:git://github.com/emi/bixo.git</connection>
-		<url>scm:git:git://github.com/emi/bixo.git</url>
+		<connection>scm:git:git://github.com/bixo/bixo.git</connection>
+		<url>scm:git:git://github.com/bixo/bixo.git</url>
 	</scm>
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
