--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,13 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
             <version>0.19.2</version>
+		<scope>provided</scope>
 		</dependency>
         
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-core</artifactId>
-            <version>1.1-WIP-97</version>
+            <version>1.1-RC-1</version>
         </dependency>
         
 		<dependency>
