Modified SiteCrawler so that is uses a JDBC tap for the state instead of sequence files. We use an in memory hsqldb for the urls and their status. pom.xml   Added cascading.jdbc dependency (along with hsqldb) ScoreGenerator.java ProcessRobotsTasks.java   It would be useful to have access to the urldatum, so added a constructor that passes that in; used that in ProcessRobotsTasks. CreateUrlOutlinksFunction   All outlinks are created with their last update time set to 0. BestUrlToFetchBuffer.java BixoJDBCTapFactory.java   New - added. Minor change to add the crawl depth as an Integer instead of a String.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
         </dependency>
         
 		<dependency>
+            <groupId>cascading</groupId>
+            <artifactId>cascading-jdbc</artifactId>
+            <version>0.0.4</version>
+        </dependency>
+
+		<dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+        </dependency>
+
+		<dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>4.0.1</version>
