--- a/contrib/helpful/build.xml
+++ b/contrib/helpful/build.xml
@@ -219,7 +219,7 @@
 		</eclipse>
 		<concat destfile="${root.dir}/.settings/org.eclipse.jdt.core.prefs"
 		        append="true">
-			<filelist dir="${root.dir}/docs/" files="eclipse-formatter.xml" />
+			<filelist dir="${root.dir}/doc/" files="eclipse-formatter.properties" />
 		</concat>
 		<replace file="${root.dir}/.settings/org.eclipse.jdt.core.prefs"
 		         token="org.eclipse.jdt.core.compiler.compliance=6.0"
