--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,6 @@
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-core</artifactId>
-            <version>1.1-RC-1</version>
         </dependency>
         
 		<dependency>
@@ -82,7 +81,6 @@
 		<dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>2.4.1</version>
         </dependency>
         
 		<dependency>
@@ -216,6 +214,20 @@
         </dependency>
         
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>2.4.1</version>
+			</dependency>
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-core</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	
 		
 </project>
