Fixed several build problems: * The install target no longer depends on test-all, since that includes the test-contrib. Thus, the bixo-core build can now be installed in the local repository and deployed to bixo.github.com/repo/ without requiring that the contrib sub-project (which ultimately depends on this deployment) compile and test successfully. * Updated cascading-test to 1.1.1. * Added a skip.lr to skip long running Unit tests. * The contrib/helpful/pom.xml now uses bixo.github.com/repo/ instead of the 101tec Nexus repos. * The contrib/helpful/pom.xml now gets many dependencies satisfied transitively via bixo-core. * The contrib/helpful/pom.xml now uses Hadoop 0.19.2. * Updated contrib.helpful.tools.AnalyzeEmail to match how the FetchPipe does scoring these days.

--- a/build.xml
+++ b/build.xml
@@ -188,10 +188,11 @@ SOFTWARE.
 	</target>
 
 	<target name="test-lr"
-			description="--> run unit tests that take a long time">
-			<antcall target="test">
-				<param name="longrunning" value="true" />
-			</antcall>
+        unless="skip.lr"
+		description="--> run unit tests that take a long time">
+		<antcall target="test">
+			<param name="longrunning" value="true" />
+		</antcall>
 	</target>
 
 	<!-- ================================================================== -->
@@ -363,7 +364,7 @@ SOFTWARE.
 	<!-- ================================================================== -->
 
 	<target name="install"
-			depends="test-all, mvn-install"
+			depends="test, test-lr, test-it, mvn-install"
 			description="--> install SNAPSHOT jar to local repository">
 	</target>
 	
