--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,6 @@
 		<dependency>
             <groupId>cascading</groupId>
             <artifactId>cascading-test</artifactId>
-            <version>1.1-WIP-97</version>
             <scope>test</scope>
         </dependency>
         
@@ -230,6 +229,12 @@
 				<groupId>cascading</groupId>
 				<artifactId>cascading-core</artifactId>
 				<version>1.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>cascading</groupId>
+				<artifactId>cascading-test</artifactId>
+				<version>1.1.1</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
