--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
-            <scope>runtime</scope>
+            <scope>test</scope>
         </dependency>
  		 
 		<dependency>
