--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,18 @@
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>0.19.2</version>
+            <version>0.20.2</version>
 		    <scope>provided</scope>
+		    <exclusions>
+		    	<exclusion>
+		    		<artifactId>jetty</artifactId>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    	</exclusion>
+		    	<exclusion>
+		    		<artifactId>jetty-util</artifactId>
+		    		<groupId>org.mortbay.jetty</groupId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
         
 		<dependency>
@@ -143,7 +153,7 @@
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-test</artifactId>
-            <version>0.19.2</version>
+            <version>0.20.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -152,6 +162,12 @@
             <artifactId>jetty</artifactId>
             <version>5.1.10</version>
             <scope>test</scope>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>servlet-api</artifactId>
+            		<groupId>javax.servlet</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
 
         <!-- These two jars could be a runtime dependency of hadoop-core,
