--- a/build.properties
+++ b/build.properties
@@ -28,7 +28,7 @@ version=1.0-SNAPSHOT
 
 # For JavaDoc
 javadoc.package=bixo
-javadoc.year=2009
+javadoc.year=2010
 javadoc.title=Bixo
 javadoc.link.java=http://java.sun.com/j2se/1.6.0/docs/api/
 
@@ -38,10 +38,12 @@ job.name=${ant.project.name}-job-${version}.jar
 main.src.dir=src/main/java
 test.src.dir=src/test/java
 it.src.dir=src/it/java
+tool.src.dir=src/tool/java
 
 main.res.dir=src/main/resources
 test.res.dir=src/test/resources
 it.res.dir=src/it/resources
+tool.res.dir=src/tool/resources
 
 lib.dir=lib
 
@@ -49,10 +51,12 @@ build.dir=build
 build.dir.main-classes=${build.dir}/classes-main
 build.dir.test-classes=${build.dir}/classes-test
 build.dir.it-classes=${build.dir}/classes-it
+build.dir.tool-classes=${build.dir}/classes-tool
 
 build.dir.main-classes-eclipse=${build.dir}/classes-main-eclipse
 build.dir.test-classes-eclipse=${build.dir}/classes-test-eclipse
 build.dir.it-classes-eclipse=${build.dir}/classes-it-eclipse
+build.dir.tool-classes-eclipse=${build.dir}/classes-tool-eclipse
 
 build.dir.test-reports=${build.dir}/test
 build.dir.it-reports=${build.dir}/it
