--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,7 @@ SOFTWARE.
 <project name="bixo-core" default="compile">
 
 	<property name="root.dir" value="${basedir}" />
-	<property file="${root.dir}/src/build/ant/build.properties" />
+	<property file="${root.dir}/build.properties" />
 
 
 	<!-- ================================================================== -->
@@ -457,6 +457,10 @@ SOFTWARE.
 				        output="${build.dir.it-classes-eclipse}" />
 				<source path="${basedir}/src/it/resources"
 				        output="${build.dir.it-classes-eclipse}" />
+				<source path="${basedir}/${tool.src.dir}"
+				        output="${build.dir.tool-classes-eclipse}" />
+				<source path="${basedir}/${tool.res.dir}"
+				        output="${build.dir.tool-classes-eclipse}" />
 
 				<!-- extras -->
 				<!-- we do not yet have extra modules, but it is just a question of time :) -->
