Roll in ipf5 bug fixes.
https://github.com/bixo/bixo/issues#issue/38

--- a/build.xml
+++ b/build.xml
@@ -555,6 +555,7 @@ SOFTWARE.
 	<!-- ================================================================== -->
 	
 	<target name="compile-contrib"
+			depends="mvn-install"
 	        description="--> compile contrib examples">
 		<subant target="compile">
 			<fileset dir="./contrib" includes="*/build.xml"/>
