--- a/build.properties
+++ b/build.properties
@@ -65,7 +65,7 @@ build.dir.dist=${build.dir}/${name}-dist-${version}
 build.release.file=${build.dir}/${name}-dist-${version}.tgz
 
 # Hadoop job stuff
-job.main.class=bixo.tools.SimpleCrawlTool
+job.main.class=bixo.examples.SimpleCrawlTool
 
 # Instrumented classes are deposited into this directory
 instrumented.dir=${build.dir}/instrumented
