--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<name>Apache release repository</name>
 			<url>https://repository.apache.org/content/repositories/releases/</url>
 		</repository>
+		<repository>
+			<id>Conjars</id>
+			<name>Cascading repository</name>
+			<url>http://conjars.org/repo</url>
+		</repository>
 		
 	</repositories>
 	
@@ -234,6 +239,11 @@
             <version>1.0</version>
             <scope>eclipse</scope>
         </dependency>
+		<dependency>
+			<groupId>com.bixolabs</groupId>
+			<artifactId>cascading.utils</artifactId>
+			<version>1.0</version>
+		</dependency>
         
 	</dependencies>
 	
