--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,18 @@
 			<name>Apache release repository</name>
 			<url>https://repository.apache.org/content/repositories/releases/</url>
 		</repository>
+		
 		<repository>
 			<id>Conjars</id>
 			<name>Cascading repository</name>
 			<url>http://conjars.org/repo</url>
+		</repository>
+		
+        <!-- For args4j -->
+        <repository>
+			<id>glassfish.org</id>
+			<name>Glassfish Maven2 Repository</name>
+			<url>http://maven.glassfish.org/content/groups/public/</url>
 		</repository>
 		
 	</repositories>
@@ -118,9 +126,9 @@
         </dependency>
 
 		<dependency>
-            <groupId>org.kohsuke</groupId>
+            <groupId>args4j</groupId>
             <artifactId>args4j</artifactId>
-            <version>2.0.10</version>
+            <version>2.0.18</version>
         </dependency>
 
 		<!-- Test dependencies -->
