--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,13 @@
 			<artifactId>cascading.utils</artifactId>
 			<version>1.1</version>
 		</dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.6.1</version>
+		</dependency>
         
 	</dependencies>
 	
