--- a/pom.xml
+++ b/pom.xml
@@ -61,18 +61,6 @@
         </dependency>
         
 		<dependency>
-            <groupId>cascading</groupId>
-            <artifactId>cascading-11-jdbc</artifactId>
-            <version>0.0.4</version>
-        </dependency>
-
-		<dependency>
-            <groupId>hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.7</version>
-        </dependency>
-
-		<dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>4.1</version>
@@ -91,12 +79,6 @@
 		</dependency>
 	
 		<dependency>
-            <groupId>org.archive</groupId>
-            <artifactId>heritrix</artifactId>
-            <version>1.14.3</version>
-        </dependency>
-
-		<dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
@@ -111,7 +93,7 @@
 		<dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <version>2.1</version>
         </dependency>
 
 		<dependency>
@@ -132,7 +114,7 @@
 		<dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.8.0</version>
+            <version>1.9.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -144,9 +126,9 @@
         </dependency>
 
 		<dependency>
-            <groupId>jetty</groupId>
+            <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
-            <version>5.1.10</version>
+            <version>6.1.26</version>
             <scope>test</scope>
             <exclusions>
             	<exclusion>
@@ -194,6 +176,14 @@
             <scope>test</scope>
         </dependency>
 
+		<dependency>
+            <groupId>org.archive</groupId>
+            <artifactId>heritrix</artifactId>
+            <version>1.14.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
 		<!-- Provided dependencies -->
 	
 		<dependency>
@@ -238,13 +228,7 @@
 	</dependencies>
 	
 	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.apache.lucene</groupId>
-				<artifactId>lucene-core</artifactId>
-				<version>2.4.1</version>
-			</dependency>
-			
+		<dependencies>			
 			<dependency>
 				<groupId>cascading</groupId>
 				<artifactId>cascading-core</artifactId>
