--- a/build.xml
+++ b/build.xml
@@ -358,7 +358,7 @@ SOFTWARE.
 	<!-- ================================================================== -->
 
 	<target name="deploy"
-			depends="install, test-contrib, mvn-deploy"
+			depends="install, test-examples, test-contrib, mvn-deploy"
 			description="--> deploy SNAPSHOT jar to shared repository">
 	</target>
 	
@@ -367,7 +367,7 @@ SOFTWARE.
 	<!-- ================================================================== -->
 
 	<target name="dist"
-		    depends="test-all, jar, doc"
+		    depends="test-all, jar, doc, jar-examples"
 	        description="--> create a tarball distribution">
 
 		<delete dir="${build.dir.dist}" />
@@ -382,6 +382,10 @@ SOFTWARE.
 		<mkdir dir="${build.dir.dist}/lib" />
 		<mkdir dir="${build.dir.dist}/runtime" />
 		<mkdir dir="${build.dir.dist}/src" />
+		<mkdir dir="${build.dir.dist}/examples" />
+		<mkdir dir="${build.dir.dist}/examples/src" />
+		<mkdir dir="${build.dir.dist}/examples/lib" />
+		<mkdir dir="${build.dir.dist}/examples/doc" />
 
 		<!-- copy launch script to target -->
 		<copy todir="${build.dir.dist}/bin">
@@ -428,21 +432,35 @@ SOFTWARE.
 			<fileset dir="${basedir}/doc/licenses" />
 		</copy>
 		
-		<!-- copy the build file -->
+		<!-- copy the build file, build properties and pom file -->
 		<copy todir="${build.dir.dist}">
 			<fileset file="${basedir}/build.xml" />
-		</copy>
-
-		<!-- copy the build properties -->
-		<copy todir="${build.dir.dist}">
 			<fileset file="${basedir}/build.properties" />
-		</copy>
-
-		<!-- copy the pom file -->
-		<copy todir="${build.dir.dist}">
 			<fileset file="${basedir}/pom.xml" />
 		</copy>
 
+		<!-- copy the examples files -->
+		<copy todir="${build.dir.dist}/examples">
+			<fileset file="${basedir}/examples/pom.xml" />
+			<fileset file="${basedir}/examples/build.properties" />
+			<fileset file="${basedir}/examples/build.xml" />
+			<fileset file="${basedir}/examples/README" />
+		</copy>
+		<copy todir="${build.dir.dist}/examples/src">
+			<fileset dir="${basedir}/examples/src" />
+		</copy>
+		<copy todir="${build.dir.dist}/examples/lib">
+			<fileset dir="${basedir}/examples/lib" />
+		</copy>
+		<copy todir="${build.dir.dist}/examples/doc">
+			<fileset dir="${basedir}/examples/doc" />
+		</copy>
+		<!-- copy bixo-examples jar to dist dir -->
+		<copy todir="${build.dir.dist}">
+			<fileset file="${basedir}/examples/build/*.jar" />
+		</copy>
+
+		
 		<tar longfile="gnu" compression="gzip" destfile="${build.release.file}">
 			<tarfileset dir="${build.dir.dist}">
 			    <include name="**" />
@@ -537,17 +555,51 @@ SOFTWARE.
 		<antcall target="clean" />
 		<!-- <antcall target="clean-eclipse" /> -->
 		<antcall target="clean-eclipse-build"/>
+		<antcall target="clean-examples" />
 		<antcall target="clean-contrib" />
 	</target>
 
 	<target name="test-all"
-			depends="test, test-lr, test-it, test-contrib"
+			depends="test, test-lr, test-it, test-examples, test-contrib"
 			description="--> run all tests">
 	</target>
 
 	<target name="compile-all"
-			depends="compile, compile-test, compile-integration-test, compile-contrib"
-			description="--> compile all files including tests and contrib">
+			depends="compile, compile-test, compile-integration-test, compile-examples, compile-contrib"
+			description="--> compile all files including tests, examples and contrib">
+	</target>
+
+	<!-- ================================================================== -->
+	<!-- Examples targets                                         			-->
+	<!-- ================================================================== -->
+	<target name="compile-examples"
+			depends="mvn-install"
+	        description="--> compile examples">
+		<subant target="compile">
+			<fileset dir="./examples" includes="build.xml"/>
+        </subant>
+	</target>
+
+	<target name="test-examples"
+	        description="--> run tests on examples">
+		<subant target="test">
+			<fileset dir="./examples" includes="build.xml"/>
+        </subant>
+	</target>
+
+	<target name="clean-examples"
+	        description="--> clean all examples">
+		<subant target="clean">
+			<fileset dir="./examples" includes="build.xml"/>
+        </subant>
+	</target>
+
+	<target name="jar-examples"
+			depends="clean-examples"
+	        description="--> build examples jar">
+		<subant target="jar">
+			<fileset dir="./examples" includes="build.xml"/>
+        </subant>
 	</target>
 
 	<!-- ================================================================== -->
