Hadoop ends up pulling in ant 1.6.5 (via jsp ) which we don't want.

--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,10 @@
 		    		<artifactId>jetty-util</artifactId>
 		    		<groupId>org.mortbay.jetty</groupId>
 		    	</exclusion>
+		    	<exclusion>
+		    		<artifactId>ant</artifactId>
+		    		<groupId>ant</groupId>
+		    	</exclusion>
 		    </exclusions>
 		</dependency>
         
