--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>hadoop-core</artifactId>
             <version>0.20.2</version>
 		<scope>provided</scope>
+		<exclusions>
+			<exclusion>
+				<groupId>ant</groupId>
+				<artifactId>ant</artifactId>
+			</exclusion>
+		</exclusions>
 		</dependency>
 	
 		<dependency>
