Finish up most changes for webmining
The AnalyzeHtml function still needs to be fixed up.

--- a/examples/build.properties
+++ b/examples/build.properties
@@ -24,10 +24,8 @@
 name=bixo-examples
 version=1.0-SNAPSHOT
 
-version=1.0-SNAPSHOT
-
 jar.name=${ant.project.name}-${version}.jar
-war.name=${ant.project.name}-${version}.war
+job.name=${ant.project.name}-job-${version}.jar
 
 main.src.dir=src/main/java
 test.src.dir=src/test/java
@@ -36,8 +34,6 @@ main.res.dir=src/main/resources
 test.res.dir=src/test/resources
 
 lib.dir=lib
-
-meta.dir=meta
 
 build.dir=build
 build.dir.main-classes=${build.dir}/classes-main
