--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 	<name>Bixo core components</name>
 	<licenses>
 		<license>
-			<name>The MIT License</name>
-			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.opensource.org/licenses/Apache-2.0</url>
 		</license>
 	</licenses>
 	<url>http://openbixo.org</url>
@@ -37,7 +37,7 @@
 	</scm>
 	<packaging>jar</packaging>
 	<!-- Must be kept in sync with "version" value in build.properties -->
-	<version>1.0-SNAPSHOT</version>
+	<version>0.7.0</version>
 	
 	<repositories>
 		<repository>
@@ -46,12 +46,6 @@
 			<url>http://bixo.github.com/repo/</url>
 		</repository>
 
-		<repository>
-			<id>Apache Releases</id>
-			<name>Apache release repository</name>
-			<url>https://repository.apache.org/content/repositories/releases/</url>
-		</repository>
-		
 		<repository>
 			<id>Conjars</id>
 			<name>Cascading repository</name>
@@ -245,13 +239,13 @@
 			<dependency>
 				<groupId>cascading</groupId>
 				<artifactId>cascading-core</artifactId>
-				<version>1.2.1</version>
+				<version>1.2.5</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>cascading</groupId>
 				<artifactId>cascading-test</artifactId>
-				<version>1.2.1</version>
+				<version>1.2.5</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
