--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -81,6 +81,25 @@
 			<version>1.5.8</version>
 		</dependency>
 
+		<dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+		</dependency>
+
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.1</version>
+            <scope>runtime</scope>
+            <exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+            </exclusions>
+        </dependency>
+
 		<!-- Test dependencies -->
 
 		<dependency>
