--- a/build.properties
+++ b/build.properties
@@ -14,7 +14,7 @@
  
 name=bixo
 # Must be kept in sync with <project><version> value in pom.xml
-version=0.7.0
+version=1.0-SNAPSHOT
 
 # For location of local cache of dependent jars
 # Default is ~/.m2/repository
