--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>0.7.0</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
