added some options and a new NotSoSimpleCrawlTool to Bixo along with misc FinderBots tools

--- a/examples/build.properties
+++ b/examples/build.properties
@@ -22,10 +22,13 @@
  */
  
 name=bixo-examples
-version=1.0-SNAPSHOT
+#version=1.0-SNAPSHOT
+version=0.7.1
 
 jar.name=${ant.project.name}-${version}.jar
 job.name=${ant.project.name}-job-${version}.jar
+fbjob.name=finderbots-bixo-job-${version}.jar
+
 
 main.src.dir=src/main/java
 test.src.dir=src/test/java
@@ -41,6 +44,7 @@ build.dir.test-classes=${build.dir}/classes-test
 
 build.dir.main-classes-eclipse=${build.dir}/classes-main-eclipse
 build.dir.test-classes-eclipse=${build.dir}/classes-test-eclipse
+fbdest.dir=${build.dir}/../..
 
 build.dir.test-reports=${build.dir}/test
 
