--- a/build.properties
+++ b/build.properties
@@ -14,7 +14,8 @@
  
 name=bixo
 # Must be kept in sync with <project><version> value in pom.xml
-version=1.0-SNAPSHOT
+#version=1.0-SNAPSHOT
+version=0.7.1
 
 # For location of local cache of dependent jars
 # Default is ~/.m2/repository
