--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -23,8 +23,9 @@
 	<artifactId>bixo-examples</artifactId>
 	<name>Bixo Examples</name>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<repositories>
+    <!-- <version>1.0-SNAPSHOT</version> -->
+   <version>0.7.1</version>
+    <repositories>
 		<repository>
 			<id>Bixo</id>
 			<name>Bixo GitHub repository</name>
@@ -36,7 +37,8 @@
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+            <!-- <version>1.0-SNAPSHOT</version> -->
+            <version>0.7.1</version>
 		</dependency>
 		
 		<dependency>
@@ -99,8 +101,18 @@
 				</exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-core</artifactId>
+            <version>0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.7.3</version>
+        </dependency>
 
-		<!-- Test dependencies -->
+        <!-- Test dependencies -->
 
 		<dependency>
             <groupId>junit</groupId>
