--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -61,7 +61,7 @@
 		<dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>0.20.2</version>
+            <version>0.20.205.0</version>
 		<scope>provided</scope>
 		<exclusions>
 			<exclusion>
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.apache.mahout</groupId>
             <artifactId>mahout-core</artifactId>
-            <version>0.6</version>
+            <version>0.8-SNAPSHOT</version>
         </dependency>
 
         <dependency>
