--- a/contrib/helpful/pom.xml
+++ b/contrib/helpful/pom.xml
@@ -40,7 +40,7 @@
 		<dependency>
 			<groupId>bixo</groupId>
 			<artifactId>bixo-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.7.1</version>
 		</dependency>
 		
 		<dependency>
