Fix up DOM-ish parsing support
Added test for running SimpleParser in "includeMarkup" mode.
Changes saveRawHTML constructor param to SimpleParser to be the more
accurate "includeMarkup"
Fixed bug where HtmlContentExtractor wasn't passing all SAX events
through to its delegate.
Added support to DOMParser to (optionally) not strip out namespace
information

--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,19 @@
             <scope>test</scope>
         </dependency>
 
+		<!-- For testing the parsing of HTML with markup -->
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.1</version>
+            <scope>test</scope>
+            <exclusions>
+				<exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>
+				</exclusion>
+            </exclusions>
+        </dependency>
 
 		<!-- Provided dependencies -->
 	
