--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -104,7 +104,19 @@
             </exclusions>
         </dependency>
 
-		<!-- Test dependencies -->
+        <dependency>
+            <groupId>org.apache.mahout</groupId>
+            <artifactId>mahout-core</artifactId>
+            <version>0.8-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+
+        <!-- Test dependencies -->
 
 		<dependency>
             <groupId>junit</groupId>
